# Json4C4

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
Code/Examples/: CMakeLists.txt
Code/Examples/Example01_simple/: CMakeLists.txt  main.cpp
Code/Examples/Example02_non_trivial_data_structure/: CMakeLists.txt  main.cpp
Code/Examples/Example03_no_macros/: CMakeLists.txt  main.cpp
Code/Examples/Example04_json_syntax_error_demo/: CMakeLists.txt  main.cpp
Code/Examples/Example05_manual_deserialization/: CMakeLists.txt  main.cpp
Code/Examples/Example06_std_data_structures/: CMakeLists.txt  main.cpp
Code/Examples/Example07_cmake_fetchcontent/: CMakeLists.txt  main.cpp
Code/Json4C4/: C4Json.cpp  C4Json.h
Code/Terathon/: TSArray.h  TSMap.h  TSString.cpp  TSString.h
Code/Tests/: CMakeLists.txt  test01.cpp  test02.cpp  test03.cpp  test04.cpp  test05.cpp
Data/Examples/: car.json  simple.json  simple_error.json  simple_with_array.json
Data/Test/: test_file01.json  test_file02.json  test_file04.json
Licenses/: LICENSE_JSON_Checker_test_files
cmake/: Json4C4Config.cmake.in
